[package]
name = "feather"
version = "0.1.0"
edition = "2021"

[lib]
name = "feather"
path = "src/lib.rs"

[[bin]]
name = "feather-bin"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.89"
byteorder = "1.5.0"
cgmath = "0.18.0"
clap = { version = "4.5.11", features = ["derive"] }
hexasphere = "14.0.0"
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
spade = "2.12.1"
three-d = "0.17.0"
three-d-asset = "0.7.0"
